--- a/index.html
+++ b/index.html
@@ -279,12 +279,12 @@
 									<div class="favorite-explanation">Quale spiegazione preferisci?
 										<br>
 										<div class="md-radio md-radio-inline">
-								      <input id="1" type="radio" name="tipo" checked>
-								      <label for="1">Context-aware</label>
+								      <input id="tipo1" type="radio" name="tipo" checked>
+								      <label for="tipo1">Explanation 1</label>
 								    </div>
 								    <div class="md-radio md-radio-inline">
-								      <input id="2" type="radio" name="tipo">
-								      <label for="2">no Context-aware</label>
+								      <input id="tipo2" type="radio" name="tipo">
+								      <label for="tipo2">Explanation 2</label>
 								    </div>
 									</div>
 									<br>
@@ -294,46 +294,62 @@
 										<div class="comprensione_racccomandazione">Ho compreso perchè l'attività mi è stata raccomandata
 											<br>
 											<div class="md-radio md-radio-inline">
-									      <input id="3" type="radio" name="comprensione" checked>
-									      <label for="3">Context-aware</label>
+									      <input id="comprensione1" type="radio" name="comprensione" checked>
+									      <label for="comprensione1">Explanation 1</label>
 									    </div>
 									    <div class="md-radio md-radio-inline">
-									      <input id="4" type="radio" name="comprensione">
-									      <label for="4">no Context-aware</label>
+									      <input id="comprensione2" type="radio" name="comprensione">
+									      <label for="comprensione2">Explanation 2</label>
+									    </div>
+											<div class="md-radio md-radio-inline">
+									      <input id="comprensione3" type="radio" name="comprensione">
+									      <label for="comprensione3">Indifferente</label>
 									    </div>
 
 										</div>
 										<div class="convincente"> La spiegazione ha reso il suggerimento più convincente
 											<br>
 											<div class="md-radio md-radio-inline">
-									      <input id="5" type="radio" name="convincente" checked>
-									      <label for="5">Context-aware</label>
+									      <input id="convincente1" type="radio" name="convincente" checked>
+									      <label for="convincente1">Explanation 1</label>
 									    </div>
 									    <div class="md-radio md-radio-inline">
-									      <input id="6" type="radio" name="convincente">
-									      <label for="6">no Context-aware</label>
+									      <input id="convincente2" type="radio" name="convincente">
+									      <label for="convincente2">Explanation 2</label>
 									    </div>
+											<div class="md-radio md-radio-inline">
+											 <input id="convincente3" type="radio" name="convincente">
+											 <label for="convincente3">Indifferente</label>
+										 </div>
 										</div>
 										<div class="nuove-info">La spiegazione mi ha permesso di scoprire nuove informazioni relative all'attività
 											<br>
 											<div class="md-radio md-radio-inline">
-									      <input id="7" type="radio" name="nuove" checked>
-									      <label for="7">Context-aware</label>
+									      <input id="nuove1" type="radio" name="nuove" checked>
+									      <label for="nuove1">Explanation 1</label>
 									    </div>
 									    <div class="md-radio md-radio-inline">
-									      <input id="8" type="radio" name="nuove">
-									      <label for="8">no Context-aware</label>
+									      <input id="nuove2" type="radio" name="nuove">
+									      <label for="nuove2">Explanation 2</label>
+									    </div>
+											<div class="md-radio md-radio-inline">
+									      <input id="nuove3" type="radio" name="nuove">
+									      <label for="nuove3">Indifferente</label>
 									    </div>
 										</div>
 										<div class="aumento-fiducia">La spiegazione ha incrementato il mio livello di fiducia nel recommender system
 											<br>
 											<div class="md-radio md-radio-inline">
-									      <input id="9" type="radio" name="fiducia" checked>
-									      <label for="9">Context-aware</label>
+									      <input id="fiducia1" type="radio" name="fiducia" checked>
+									      <label for="fiducia1">Explanation 1</label>
 									    </div>
 									    <div class="md-radio md-radio-inline">
-									      <input id="10" type="radio" name="fiducia">
-									      <label for="10">no Context-aware</label>
+									      <input id="fiducia2" type="radio" name="fiducia">
+									      <label for="fiducia2">Explanation 2</label>
+									    </div>
+											<div class="md-radio md-radio-inline">
+									      <input id="fiducia3" type="radio" name="fiducia">
+									      <label for="fiducia3">Indifferente</label>
 									    </div>
 										</div>
 
