--- a/index.html
+++ b/index.html
@@ -118,8 +118,10 @@
 								<h2>
 									Seleziona <strong class='color' >contesti</strong>
 								</h2>
-								<p>Indica le tue preferenze e le informazioni di contesto.
-									Importante: non è necessario inserire tutti i contesti</p>
+								<hr>
+								<p>Indica le tue preferenze e le informazioni di contesto.<br />
+									Importante: non è necessario inserire tutti i contesti!</p>
+									<hr>
 							</div>
 							<div class="row">
 								<div class="form-group">
@@ -136,7 +138,7 @@
 								<hr>
 								<div class='col-md-4' >
 									<p>
-										<b>umore</b>
+										<b>Umore</b>
 									</p>
 
 									<div class="funkyradio">
@@ -153,7 +155,7 @@
 								</div>
 								<div class='col-md-4' >
 									<p>
-										<b>giorno</b>
+										<b>Giorno</b>
 									</p>
 
 									<div class="funkyradio">
@@ -169,7 +171,7 @@
 								</div>
 								<div class='col-md-4' >
 									<p>
-										<b>salute</b>
+										<b>Salute</b>
 									</p>
 
 									<div class="funkyradio">
@@ -186,7 +188,7 @@
 								</div>
 								<div class='col-md-4' >
 									<p>
-										<b>compagnia</b>
+										<b>Compagnia</b>
 									</p>
 
 									<div class="funkyradio">
@@ -206,7 +208,7 @@
 								</div>
 								<div class='col-md-4' >
 									<p>
-										<b>pasto</b>
+										<b>Pasto</b>
 									</p>
 
 									<div class="funkyradio">
