--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 								</h2>
 								<hr>
 								<p>Indica le tue preferenze e le informazioni di contesto.<br />
-									Importante: non è necessario inserire tutti i contesti!</p>
+									<b>Importante:</b> non è necessario inserire tutti i contesti!</p>
 									<hr>
 							</div>
 							<div class="row">
