--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 					<div class='section-block portfolio-block' >
 						<div class='container-fluid' id="containerImage" >
 							<div class='section-header' >
-								<h2> <strong class='color' >preferenza</strong> & <strong class='color' >valutazione</strong></h2>
+								<h2>Valuta le explanation <strong class='color'>explanation</strong></h2>
 							</div>
 							<div class="row">
 								<div class="col-md-4">
