--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 									Seleziona <strong class='color' >contesti</strong>
 								</h2>
 								<hr>
-								<p>Indica le tue preferenze e le informazioni di contesto.<br />
+								<p style="font-size:25px">Indica le tue preferenze e le informazioni di contesto.<br />
 									<b>Importante:</b> non è necessario inserire tutti i contesti!</p>
 									<hr>
 							</div>
