nome next local

--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
 									</button>
 
 									<button id="next-raccomnandation" class='btn-custom' onclick="suggerisciAltro()">
-										Suggerisci Altro
+										Valuta Successivo
 									</button>
 							</div>
 
