--- a/index.html
+++ b/index.html
@@ -143,12 +143,12 @@
 
 									<div class="funkyradio">
 										<div class="funkyradio-success" >
-												<input type="radio" name="umore" id="buono" />
-												<label for="buono" >Buon Umore</label>
+												<input type="radio" name="umore" id="buonumore" />
+												<label for="buonumore" >Buon Umore</label>
 										</div>
 										<div class="funkyradio-success">
-												<input type="radio" name="umore" id="non_buono" />
-												<label for="non_buono">Cattivo Umore </label>
+												<input type="radio" name="umore" id="nonbuonumore" />
+												<label for="nonbuonumore">Cattivo Umore </label>
 										</div>
 
 								</div>
@@ -160,12 +160,12 @@
 
 									<div class="funkyradio">
 										<div class="funkyradio-success">
-												<input type="radio" name="giorno" id="feriale" />
-												<label for="feriale">Feriale </label>
+												<input type="radio" name="giorno" id="midweek" />
+												<label for="midweek">Feriale </label>
 										</div>
 										<div class="funkyradio-success">
-												<input type="radio" name="giorno" id="festivo" />
-												<label for="festivo">Festivo </label>
+												<input type="radio" name="giorno" id="weekend" />
+												<label for="weekend">Festivo </label>
 										</div>
 								</div>
 								</div>
@@ -176,12 +176,12 @@
 
 									<div class="funkyradio">
 						        <div class="funkyradio-success">
-						            <input type="radio" name="salute" id="buona" />
-						            <label for="buona">Buona Salute</label>
+						            <input type="radio" name="salute" id="buonasalute" />
+						            <label for="buonasalute">Buona Salute</label>
 						        </div>
 						        <div class="funkyradio-success">
-						            <input type="radio" name="salute" id="non_buona" />
-						            <label for="non_buona">Allergie/Intolleranze/Diabete </label>
+						            <input type="radio" name="salute" id="nonbuonasalute" />
+						            <label for="nonbuonasalute">Allergie/Intolleranze/Diabete </label>
 						        </div>
 
 						    </div>
